--- a/index.css
+++ b/index.css
@@ -1,5 +1,7 @@
 body {
-    background-color: hsl(0, 0%, 70%);
+    background-image: url(icons/background.svg);
+    background-size: cover;
+    background-color: rgb(110, 148, 170);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -17,14 +19,18 @@ h1 {
 .reset-button {
     position: absolute;
     top: 10px;
-    right: 10px;
-    width: 100px;
-    height: 100px;
-    background-image: url(icons/refresh-circle.svg);
+    right: 40px;
     border: none;
-    background-color:hsl(0, 0%, 70%);
+    background: none;
+    height: 150px;
+    width: 150px;
     cursor: pointer;
+    transition: transform 1.6s ease;
 }
+
+.reset-button:hover {
+    transform: rotate(360deg); /* Gira 360 grados en el hover */
+  }
 
 .next-button{
     width: 300px;
