--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     background-image: url(icons/background.svg);
     background-size: cover;
-    background-color: rgb(110, 148, 170);
+    background-color: rgb(8, 112, 168);
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -28,22 +28,43 @@ h1 {
     transition: transform 1.6s ease;
 }
 
-.reset-button:hover {
-    transform: rotate(360deg); /* Gira 360 grados en el hover */
-  }
+.reset-button svg{
+    height: 130px;
+}
 
-.next-button{
+.reset-button:hover {
+    transform: rotate(360deg);
+}
+
+.button {
     width: 300px;
     font-size: 40px;
     border: solid black 5px;
-    padding-top:2rem;
-    padding-bottom:2rem;
-    background-color:hsl(0, 0%, 70%);
+    padding-top: 2rem;
+    padding-bottom: 2rem;
+    background-color: hsl(0, 0%, 70%);
     border-radius: 1.5rem;
     cursor: pointer;
+    visibility: hidden;
 }
 
-.next-button:hover{
-    background-color:hsl(0, 0%, 0%);
+.activated {
+    animation: shake 0.5s ease-in-out; 
+}
+
+@keyframes shake {
+    0%, 100% {
+        transform: translateX(0);
+    }
+    25%, 75% {
+        transform: translateX(-5px);
+    }
+    50% {
+        transform: translateX(5px);
+    }
+}
+
+.button:hover {
+    background-color: hsl(0, 0%, 0%);
     color: white;
 }
