--- a/index.css
+++ b/index.css
@@ -33,7 +33,7 @@ h1 {
 }
 
 .reset-button:hover {
-    transform: rotate(360deg);
+    transform: rotate(360deg)scale(1.1);
 }
 
 .button {
@@ -46,10 +46,18 @@ h1 {
     border-radius: 1.5rem;
     cursor: pointer;
     visibility: hidden;
+    transition: transform 0.3s ease-in-out;
 }
 
 .activated {
     animation: shake 0.5s ease-in-out; 
+}
+
+.level-traveling-buttons {
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    width: 45rem;
 }
 
 @keyframes shake {
@@ -65,6 +73,8 @@ h1 {
 }
 
 .button:hover {
+    transition: transform 0.3s ease-in-out;
+    transform: scale(1.2);
     background-color: hsl(0, 0%, 0%);
     color: white;
 }
